main.css
/* ... */
nav > ul > li > a {
	color: #fff; /* IE8 proofing */
	color: rgb(248,248,248);
	border-bottom-color: rgb(248,248,248);
}

h2.secA, h3.secA, strong.secA, span.secA {
	color: rgb(160, 120, 120);
}

h2.secB, h3.secB, strong.secB, span.secB {
	color: rgb(120, 160, 160);
}

h2.secC, h3.secC, strong.secC, span.secC {
	color: rgb(160, 160, 120);
}

h2.secD, h3.secD, strong.secD, span.secD {
	color: rgb(120, 160, 120);
}

h2.secE, h3.secE, strong.secE, span.secE {
	color: rgb(120, 120, 160);
}

h2.secF, h3.secF, strong.secF, span.secF {
	color: rgb(160, 120, 160);
}

a {
	color: rgb(80, 80, 90);
}

a:visited {
	color: rgb(55, 55, 115);
}

a:hover ,
a:focus {
	color: rgb(115, 115, 150);
}

.taglist {
	display: none;
}

.taglist:target {
	display: block;
}

/********************
 * Page Elements
 ********************/
 
html {
	height: 100%;
}

body {
	height: 100%;
	overflow-y: scroll;
}

header {
	position: absolute;
	width: 100%;
}

header > nav > div{
	position: relative;
	height: 0%;
}

div.social{
	position: absolute;
	top: 0px;
	right: 0px;
	height: 100%;
}

div.social > a{
	vertical-align: middle;
}

h1 {
	padding-top: 15px;
	padding-bottom: 15px;
	padding-left: 10px;
	white-space: nowrap;
}

h2 {
	text-decoration: underline;
	text-align: center;
	margin-bottom: 10px;
}

h3 {
	margin-bottom: 10px;
}

.box > ul {
	padding-left: 20px;
	padding-bottom: 20px;
}

.box > ul > li > ul{
	padding-left: 20px;
}


p, .box > ul > li{
	padding-bottom: 12px;
}

table, td{
	padding-bottom: 20px;
}

.column {
	max-width: 1024px;
	margin: auto;
}

article {
	min-height: 100%;
}

.box {
	padding-top: 177px; /*157 + 20*/
	padding-bottom: 20px;
	padding-left: 20px;
	padding-right: 20px;
	transition: padding .5s;
}

footer {
	text-align: right;
	width: 100%;
	height: 20px;
	position: relative;
	bottom: 20px;
	left: 0;
}

.footerbox {
	padding-left: 10px;
	padding-right: 10px;
}

tr > .leftpad {
	padding-left: 10px;
}

.project {
	width: 128px;
	transition: width .5s;
}

.portrait {
	width: 140px;
	padding-left: 40px;
	padding-right: 40px;
	transition: width .5s, padding .5s;
}

.homeimg {
	max-width: 640px;
	margin: auto;
	padding-bottom: 20px;
}

.posthead,
.taghead {
	padding-bottom: 30px;
}

.posthead > h2{
	text-align: left;
	text-decoration: none;
}

.posthead > a,
.taghead > a {
	border: none;
	padding: 2px 8px;	
	text-align: center;
	text-decoration: none;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	border-radius: 6px;
	
	font-weight: bold;
	
	overflow: hidden;
	
	margin-bottom: 2px;
}

.taghead {
	text-align: center;
}

.sharebtns {
	padding-top: 10px;
	padding-bottom: 10px;
}
.sharebtns > a:focus,
.sharebtns > a:active,
.sharebtns > a:visited {
	color: rgb(80, 80, 90);
}

.sharebtns > a:hover,
.sharebtns > a:focus {
	color: rgb(80, 80, 90);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.sharebtns > a {
	font-size: 18px;
	transition: font-size .5s;
	
	color: rgb(80, 80, 90);
	
	border: none;
	padding: 2px 8px;	
	text-align: center;
	vertical-align: top;
	text-decoration: none;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	border-radius: 6px;
	
	font-weight: bold;
	
	overflow: hidden;
	margin-bottom: 2px;
}

.sharebtns > a > span {
	font-family: Calibri, Arial, sans-serif;
}

.posthead > a:focus,
.posthead > a:active,
.posthead > a:visited
.taghead > a:focus,
.taghead > a:active,
.taghead > a:visited {
	color: rgb(80, 80, 90);
}

.posthead > a:hover,
.posthead > a:focus,
.taghead > a:hover,
.taghead > a:focus {
	color: rgb(80, 80, 90);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.paginator > ul {
	padding: 0;
}
.paginator > ul > li {

	display: inline-block;
	text-decoration: none;
}

.blogpost > p > img {
	max-width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/********************
 * Navigation Bar
 ********************/

nav {
	white-space: nowrap;
	font-size: 0px;
}

nav > ul > li {
	display: inline-block;
	margin-right: 10px;
	transition: margin-right .5s;
}

nav > ul > li > a {
	display: inline-block;

	padding-right: 20px;
	padding-left: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
	
	text-decoration: none;
	border-bottom-width: 3px;
	border-bottom-style: solid;
	border-top-left-radius: 8px;
	border-top-right-radius: 8px;

	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
}

nav > ul > li > a:hover,
nav > ul > li > a:focus {
	padding-right: 30px;
	padding-left: 30px;
	background-color: rgba(0, 0, 0, .25);
  
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

nav > ul > .active > a
{
	padding-right: 30px;
	padding-left: 30px;
	
	padding-bottom: 7px;
	border-bottom-width: 6px;
	background-color: rgba(0, 0, 0, .25);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */	
}

nav > ul > .active > a:hover,
nav > ul > .active > a:focus {
	background-color: rgba(0, 0, 0, .35);
	
	opacity: 1.0;
	filter: alpha(opacity=100); /* For IE8 and earlier */
}

.fa {
	font-size: 24.6px;
	padding: 10px;
	text-align: center;
	text-decoration: none;
	margin: 0px;
	vertical-align: middle;
	color: rgb(176, 176, 176);
}

.fa:focus,
.fa:active,
.fa:visited {
	color: rgb(176, 176, 176);
}

.fa:hover{
	color: rgb(248, 248, 248);
}


/********************
 * Post Navigation
 ********************/

.postnav {
	padding-top: 20px;
    padding-bottom: 20px;
	overflow: auto;
}
/* ... */

